<resources>
    <string name="app_name">Barmats-Web</string>
    <string name="passwordTVLogin">Password</string>
    <string name="nameTVLogin">Name</string>
    <string name="nameTVregister">Name</string>
    <string name="passwordTVregister">Password</string>
    <string name="verify_passwordTVregister">Verify password</string>
    <string name="display_nameTVregister">Display name</string>
    <string name="pictureTVregister">Picture</string>
    <string name="upload_profile_picture">Upload profile picture</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="not_signed_up">Don\'t have an account yet?</string>
    <string name="not_signed_up_second">Sign Up</string>
    <string name="upload_with">Upload with:</string>
    <string name="password_hint">Enter password here</string>
    <string name="username_hint">Enter username here</string>
    <string name="switch_text">Switch to dark mode</string>
    <string name="switch_text_to_bright">Switch to bright mode</string>

    <string name="settings">Settings</string>
    <string name="url_server">URL server:</string>
    <string name="update_url_server">Update URL server</string>
    <string name="Login_title">Login</string>
    <string name="Register_title">Register</string>
    <string name="username_already_taken">Username already taken</string>
    <string name="close">Close</string>
    <string name="please_upload_a_photo">Please upload a photo</string>
    <string name="passwords_are_not_identical">Passwords are not identical</string>
    <string name="password_length">Password must have at least 8 characters</string>
    <string name="fields_are_empty">one or more fields are empty</string>
    <string name="username_or_password_are_incorrect">Username or password are incorrect</string>
    <string name="enter_message"> enter message…</string>
    <string name="Confirmation">Log out</string>
    <string name="log_out">Do you want to log out?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>



</resources>